Logo Added and More Navigations

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13,13 +13,13 @@
   --title-color: hsl(var(--hue), 12%, 15%);
   --text-color: hsl(var(--hue), 8%, 35%);
   --body-color: hsl(var(--hue), 100%, 99%);
-  --container-color: #FFF;
+  --container-color: #fff;
 
   /*========== Font and typography ==========*/
-  --body-font: 'Open Sans', sans-serif;
+  --body-font: "Open Sans", sans-serif;
   --h1-font-size: 1.5rem;
-  --normal-font-size: .938rem;
-  --tiny-font-size: .625rem;
+  --normal-font-size: 0.938rem;
+  --tiny-font-size: 0.625rem;
 
   /*========== z index ==========*/
   --z-tooltip: 10;
@@ -96,7 +96,7 @@ img {
   width: 100%;
   background-color: var(--container-color);
   z-index: var(--z-fixed);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 /*=============== NAV ===============*/
@@ -130,11 +130,11 @@ img {
     display: grid;
     align-content: center;
     border-radius: 1.25rem 1.25rem 0 0;
-    transition: .4s;
+    transition: 0.4s;
   }
 }
 
-.nav__list, 
+.nav__list,
 .nav__link {
   display: flex;
 }
@@ -164,7 +164,7 @@ img {
 .active-link {
   position: relative;
   color: var(--first-color);
-  transition: .3s;
+  transition: 0.3s;
 }
 
 /* Minimalist design, active link */
@@ -191,6 +191,20 @@ img {
     display: none;
   }
 }
+
+/* Light mode */
+/* :root {
+  --body-bg: #ffffff;
+  --body-color: #000000;
+} */
+
+/* Dark mode */
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --body-bg: #000000;
+    --body-color: #ffffff;
+  }
+} */
 
 /* For medium devices */
 @media screen and (min-width: 576px) {
@@ -226,9 +240,9 @@ img {
 
   /* First design, remove if you choose the minimalist design */
   .active-link::before {
-    content: '';
+    content: "";
     position: absolute;
-    bottom: -.75rem;
+    bottom: -0.75rem;
     width: 4px;
     height: 4px;
     background-color: var(--first-color);
