--- a/public/assets/css/editor.css
+++ b/public/assets/css/editor.css
@@ -1,100 +1,213 @@
-.banner{
-    width: 100%;
-    height: 400px;
-    position: relative;
-    background: #e7e7e7;
-    background-size: cover;
-    background-position: center;
+.banner {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  background: #e7e7e7;
+  background-size: cover;
+  background-position: center;
 }
 
-.banner-upload-btn{
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+.banner-upload-btn {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-.banner-upload-btn img{
-    width: 20px;
+.banner-upload-btn img {
+  width: 20px;
 }
 
-.blog{
-    width: 70vw;
-    min-width: 400px;
-    height: 100px;
-    display: block;
-    margin: auto;
-    padding: 50px 0;
+.blog {
+  width: 70vw;
+  min-width: 400px;
+  height: 100px;
+  display: block;
+  margin: auto;
+  padding: 50px 0;
 }
 
-textarea::-webkit-scrollbar{
-    width: 10px;
+textarea::-webkit-scrollbar {
+  width: 10px;
 }
 
-textarea::-webkit-scrollbar-thumb{
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+textarea::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .title,
-.article{
-    width: 100%;
-    min-height: 100px;
-    height: auto;
-    outline: none;
-    font-size: 50px;
-    font-weight: 600;
-    color: #2d2d2d;
-    resize: none;
-    border: none;
-    padding: 10px;
-    border-radius: 10px;
+.article {
+  width: 100%;
+  min-height: 100px;
+  height: auto;
+  outline: none;
+  font-size: 50px;
+  font-weight: 600;
+  color: #2d2d2d;
+  resize: none;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .title::placeholder,
-.article::placeholder{
-    color: #2d2d2d;
+.article::placeholder {
+  color: #2d2d2d;
 }
 
-.article{
-    height: 500px;
-    font-size: 20px;
-    margin-top: 20px;
-    line-height: 30px;
-    font-weight: 500;
-    padding-bottom: 100px;
-    white-space: pre-wrap;
+.article {
+  height: 500px;
+  font-size: 20px;
+  margin-top: 20px;
+  line-height: 30px;
+  font-weight: 500;
+  padding-bottom: 100px;
+  white-space: pre-wrap;
 }
 
-.blog-options{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: #fff;
-    z-index: 9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.blog-options {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: #fff;
+  z-index: 9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.btn{
-    border: none;
-    outline: none;
-    cursor: pointer;
+.btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
-.btn.grey{
-    background: #a5a5a5;
-    color: #fff;
-    margin-left: 20px;
-    font-size: 14px;
+.btn.grey {
+  background: #a5a5a5;
+  color: #fff;
+  margin-left: 20px;
+  font-size: 14px;
+}
+/* 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  position: relative;
+  font-family: "poppins", sans-serif;
+}
+
+::selection {
+  background: #1b1b1b;
+  color: #fff;
+}
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5vw;
+  background: #fff;
+  z-index: 9;
+}
+
+.links-container {
+  display: flex;
+  list-style: none;
+}
+
+.link {
+  padding: 10px;
+  margin-left: 10px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #000;
+}
+
+.header {
+  margin-top: 60px;
+  width: 100%;
+  height: calc(100vh - 60px);
+  background: url(../img/header.png);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  text-align: center;
+}
+
+.heading {
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 80px;
+  line-height: 60px;
+  margin-bottom: 80px;
+}
+
+.heading .small {
+  display: block;
+  font-size: 40px;
+}
+
+.heading .no-fill {
+  font-style: italic;
+  color: transparent;
+  -webkit-text-stroke: 2px #fff;
+} */
+
+.btn {
+  padding: 10px 20px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.7);
+  color: #000;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.blogs-section {
+  width: 100%;
+  padding: 50px 5vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 80px;
+}
+
+.blog-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.blog-overview {
+  margin: 10px 0 20px;
+  line-height: 30px;
+}
+
+.btn.dark {
+  background: #1b1b1b;
+  color: #fff;
 }
